# SLIE

./: .dockerignore  .env.example  CODEBASE.md  README.md  index.html  inference.py  main.py  openenv.yaml  pyproject.toml  requirements.txt
data/: gestures.json  tasks.json
docs/: agent.md  api.md  build_plan.md  constraints.md  design.md  environment.md  file_structure.md  grader.md  overview.md  tasks.md
server/: app.py
slie/: __init__.py  app.py  data_loader.py  env.py  gesture_layer.py  graders.py  models.py  reward.py  state.py
tests/: run_all_checks.py  smoke_checks.py  spec_conformance.py  test_api.py  test_env.py  test_graders.py  test_models.py  test_noise.py  test_reward.py
