[project]
name = "slie"
version = "1.1.0"
description = "Sign Language Interaction Environment"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi==0.111.0",
  "uvicorn==0.29.0",
  "pydantic==2.7.1",
  "requests==2.31.0",
  "openai==1.30.0",
  "openenv-core>=0.2.0"
]

[project.scripts]
server = "server.app:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"
