[project]
name = "slie"
version = "1.1.0"
description = "Sign Language Interaction Environment"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.111,<1",
  "uvicorn>=0.29,<1",
  "pydantic>=2.12,<3",
  "requests>=2.31,<3",
  "openai>=2.7.2,<3",
  "openenv-core>=0.2,<1"
]

[project.scripts]
server = "server.app:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"
